- STARKA-136 add mapping info values to strelka output
v2.1.5
- Add CRAM input support
v2.1.4
- Turned ON DP filter for rule filters as default
- Made scoring-model a configurable option for starling pyflow
- Sync many blt_util changes with manta
- Changed scoring model names to be case insensitive, added assertion for unknown model
- Change minimum support gcc version to 4.7
- Runtime opt: reduce excessive syscalls from position based std::map's
v2.1.3
- STARKA-127 fix strelka workflow config file interface
- STARKA-128 fix build with gcc-4.9.0, finally get rid of solexa q-scores
- STARKA-125 add starling workflow and demo
v2.1.2
- STARKA-124 fix strelka overlapping indel issue
- STARKA-118 fix GSNAP alignment example: leading deletion in exon
- Rolled back elimination of min-vexp and min-mismatch-window default settings, these are again required as command-line 
- Set refitted hpol indel model as default
- STARKA-113 Set parameter values according to Isis defaults
- STARKA-130 Read buffer not being cleared in certain phasing context
- STARKA-131 Codon-phasing crash when run with external indel candidates
v2.1.1
- STARKA-111 transfer full strelka workflow v1 logic into starka
- STARKA-58 Refit indel homopolymer model
- STARKA-89 LowGQX filters for no-calls in reference/depth records around indels is not se
- STARKA-91 Investigate low-depth passing hom alt calls in VQSR model
- STARKA-112 bwamem + starling 2.1 crash
v2.1
- STARKA-53 remove grouper legacy contig logic
- STARKA-29 short-range SNP phasing and arbitrary phasing window
- STARKA-57 HighRefRep should not be default rule-based filter for indels
v2.0.21
- Minor VQSR fixes
- STARKA-52 gVCF block compression filters not cleared on single record 
v2.0.20
- Added VQSR for indels
- Updated VQSR model parameters
- Updated homopolymer error-model
- Modified block-compression parameters for better NextSeq compression 
- Added option for providing bed-file with sites that should not be block-compressed 