@@ -1,4 +1,5 @@
-- STARKA-136 add mapping info values to strelka output
+- STARKA-138 add read position features to strelka SNV output
+- STARKA-136 add mapping info values to strelka SNV output
 v2.1.5
 - Add CRAM input support
 v2.1.4
@@ -10,7 +11,7 @@ v2.1.4
 - Runtime opt: reduce excessive syscalls from position based std::map's
 v2.1.3
 - STARKA-127 fix strelka workflow config file interface
-- STARKA-128 fix build with gcc-4.9.0, finally get rid of solexa q-scores
+- STARKA-128 fix build with gcc-4.9.0, remove solexa q-scores
 - STARKA-125 add starling workflow and demo
 v2.1.2
 - STARKA-124 fix strelka overlapping indel issue
